--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
 }
