--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,9 @@
-{
-  "dependencies": {
+{ 
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+    },
+      "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
